assets/style.css
@import url("https://fonts.googleapis.com/css2?family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");

/* html {
  --black_olive: #374438;
  --smoky_black: #11100a;
  --alabaster: #f2f1ea;
  --ash_gray: #b8b6a3;
  --battleship_gray: #85847b;
  --ebony: #656458;
  --air_superiority_blue: #7198ac;
} */

html {
  --black_olive: oklch(37% 0.0264 148);
  --smoky_black: oklch(17% 0.01 999);
  --alabaster: oklch(96% 0.01 99);
  --ash_gray: oklch(80% 0.015 99);
  --ash_gray_half: oklch(88% 0.015 99);
  --battleship_gray: oklch(65% 0.0175 99);
  --ebony: oklch(50% 0.02 99);
  --air_superiority_blue: oklch(65% 0.06 230);
  --error_red: oklch(45% 0.16 30);
}

html {
  /* font-size: 87.5%; */
  /* 1rem = 10px; 10px/16px = 62.5% */
  font-family: "Playfair", serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
}
@media only screen and (min-width: 825px) {
  html {
    /* font-size: 100%; */
  }
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

* {
  margin: 0;
}

body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  display: flex;
  justify-content: center;
  color: var(--battleship_gray);
  background-color: var(--black_olive);
}

img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}

input,
button,
textarea,
select {
  font: inherit;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
  font-size: 100%;
}

#root,
#__next {
  isolation: isolate;
}

#root {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  gap: 3em;
  margin-left: 0.5em;
  margin-right: 0.5em;
  min-height: 100dvh;
  min-width: 70%;
  max-width: clamp(768px, 90%, 98%);
}

@media only screen and (min-width: 825px) {
  #root {
    margin-left: 1em;
    margin-right: 1em;
    /* max-width: 900px; */
    min-width: clamp(768px, 80%, 900px);
    /* min-width: 768px; */
    max-width: clamp(768px, 80%, 900px);
    /* width: clamp(768px, 80%, 900px); */
  }
}

.margin_bottom_1em {
  margin-bottom: 1em;
}

/* --- Header ---------------------------------------------- */

header {
  display: flex;
  gap: 1.5rem;
  justify-content: space-between;
  flex-direction: column;
  /* font-size: 50%; */
}

@media only screen and (min-width: 825px) {
  header {
    flex-direction: row;
    gap: 3rem;
  }
}

header h2 {
  /* background: url("{{ .Site.BaseURL }}header-bg.png") no-repeat top left; */
  background: url("{{ .Site.BaseURL }}empty-page-v3.webp") no-repeat top left;
  background-size: 350px 256px;
  background-repeat: no-repeat;
  background-position: bottom right;
  width: 350px;
  height: 70px;
  text-align: center;
  padding-top: 1.4rem;
  font-size: 1.25rem;
  font-weight: normal;
  color: var(--ebony);
}

nav {
  display: flex;
  gap: 1.5rem;
  /* justify-content: flex-end; */
  justify-content:center;
  align-items: center;
  /* margin-right: 0.5em; */
  flex-grow: 1;
}

@media only screen and (min-width: 825px) {
  nav {
    justify-content: space-between;
    font-size: 1.125rem;
  }
}

nav a {
  background-repeat: no-repeat;
  
  color: var(--ash_gray);
  text-decoration: none;
  display: flex;
  gap: 0.6em;
}
nav a svg {
  fill: var(--ash_gray);
  margin-top: 0.25em;
}

nav a:hover {
  color: var(--alabaster);
}
nav a:hover svg {
  fill: var(--alabaster);
}

/* --- Middle section ---------------------------------------------- */


section {
  /* flex-grow: 1; */
  position: relative;
}

section.sided {
  display: flex;
  flex-direction: column;
  gap: 2rem;;
}

@media only screen and (min-width: 825px) {
  section.sided {
    flex-direction: row;
  }
}

/* --- Main block ---------------------------------------------- */

main {
  position: relative;
  /* flex-grow: 1; */
  /* flex-shrink: 1; */
  /* width: fit-content; */
}

@media only screen and (min-width: 825px) {
  main {
    /* width: 67%; */
    /* width: clamp(min-content, min-content, 800px); */
    /* width: clamp(500px, 700px, 800px); */
    /* min-width: 450px; */
    /* width: max( 20%, 450px ); */
    /* min-width: 550px; */
    /* width: 30rem; */
    /* width: fit-content; */
  }
}

article {
  padding: 1.5em;
  color: var(--smoky_black);
  background-color: var(--alabaster);
  border-radius: 0.125em;
  box-shadow: 0 0.125em 0.2em 0 var(--smoky_black);
  text-align: left;
}

article.verse {
  font-size: 1.25rem;
  /* margin-left: 0.2em; */
  /* margin-right: 0.2em; */
  min-height: 1em;
  padding: 1em;
  min-width: max-content;
  width: 100%;
  /* min-width: max(max-content, 600px); */
  /* min-width: clamp(max-content, 600px, 620px); */
  
}

article.record {
  min-width: 300px; 
}
@media only screen and (min-width: 825px) {
  article.verse {
    width: 400px;
    padding: 2em;
  }
  article.record {
    min-width: 500px; 
  }
}

article.verse h1 {
  font-weight: 700;
  font-size: 1.75rem;
  margin-top: 0.3em;
  margin-bottom: 1em;
  line-height: 110%;
  color: var(--ebony);
  max-width: calc(100vw - 5em);
}

@media only screen and (min-width: 825px) {
  article.verse h1 {
    max-width: 18em;
  }
}

h1.error {
  color: var(--error_red) !important;
}

article.verse pre {
  display: none;
}

article.verse pre + p {
  margin-top: 0;
}

article.verse h1.margin_bottom_1em {
  margin-bottom: 1em;
}

article.verse h1.margin_bottom_2em {
  margin-bottom: 2em;
}

article.verse p {
  margin-top: 1em;
  margin-bottom: 1em;
  /* white-space: nowrap; */
  /* width: fit-content; */
}

@media only screen and (min-width: 825px) {
  article.verse {
    /* padding-left: 2em; */
  }
}

article.verse .date {
  color: var(--air_superiority_blue);
  font-style: italic;
  margin-top: 1em;
  margin-right: 3em;
  text-align: right;
}

article.verse p.comment {
  color: var(--ebony);
  font-style: italic;
  margin-left: 1.125em;
}
article.verse .authorcomment {
  color: var(--ebony);
  font-style: italic;
  margin-left: 1.125em;
}
/* ... */

